# buildwatch

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: tools.cmake
src/: main.c
